--- a/system-themes/colorful/master.css
+++ b/system-themes/colorful/master.css
@@ -981,7 +981,15 @@ a.badge:focus {
     box-shadow: 0 0 20px rgba(0,0,0,0.5); /* shadow parameters */
     padding: 5px;
     margin: 10px;
+    overflow: auto;
     height:100%;
+}
+
+.shadowGraph {
+  box-shadow: 0 0 20px rgba(0,0,0,0.5); /* shadow parameters */
+  padding: 5px;
+  margin: 10px;
+  height:100%;
 }
 
 .shadowTitle {
@@ -995,6 +1003,7 @@ a.badge:focus {
 }
 
 .shadow:hover,
+.shadowGraph.hover,
 .shadowTitle:hover {
     box-shadow : 0 0 25px rgba(0,0,0,0.4);
     transform: translateY(-1px);
