--- a/system-themes/dark-mode/master.css
+++ b/system-themes/dark-mode/master.css
@@ -978,8 +978,17 @@ a.badge:focus {
     box-shadow: 5px 5px 15px rgba(0,0,0,0.5); /* shadow parameters */
     padding: 5px;
     margin: 10px;
+    overflow: auto;
     height: 100%;
     border: 1px solid #4682b4;
+}
+
+.shadowGraph {
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.5); /* shadow parameters */
+  padding: 5px;
+  margin: 10px;
+  height: 100%;
+  border: 1px solid #4682b4;
 }
 
 .shadowTitle {
@@ -993,6 +1002,7 @@ a.badge:focus {
 }
 
 .shadow:hover,
+.shadowGraph.hover,
 .shadowTitle:hover {
     box-shadow : 6px 6px 20px rgba(0,0,0,0.4);
     /* transform: translateY(-1px); /**/
