--- a/system-themes/yellow-blue/master.css
+++ b/system-themes/yellow-blue/master.css
@@ -979,8 +979,17 @@ a.badge:focus {
     box-shadow: 5px 5px 15px rgba(0,0,0,0.5); /* shadow parameters */
     padding: 5px;
     margin: 10px;
+    overflow: auto;
     height: 100%;
     border: 2px solid rgba(25, 79, 130,0.5);
+}
+
+.shadowGraph {
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.5); /* shadow parameters */
+  padding: 5px;
+  margin: 10px;
+  height: 100%;
+  border: 2px solid rgba(25, 79, 130,0.5);
 }
 
 .shadowTitle {
@@ -995,6 +1004,7 @@ a.badge:focus {
 }
 
 .shadow:hover,
+.shadowGraph.hover,
 .shadowTitle:hover {
     box-shadow : 6px 6px 20px rgba(0,0,0,0.4);
     /* transform: translateY(-1px); /**/
