--- a/system-themes/dark-mode/master.css
+++ b/system-themes/dark-mode/master.css
@@ -1030,3 +1030,18 @@ div.pie {
   height:100%;
 
 }
+
+kbd.menu,
+kbd.key,
+kbd>samp,
+kbd>kbd {
+    background-color: #5a5a5a;
+    border-radius: 3px;
+    color: #fff;
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.85em;
+    line-height: 1.4;
+    margin: 0 .1em;
+    padding: .1em .6em;
+}
