--- a/system-themes/default/dark-master.css
+++ b/system-themes/default/dark-master.css
@@ -1050,3 +1050,18 @@ button:hover {
   background-color: #5cb85c;
   color: white;
 }
+
+kbd.menu,
+kbd.key,
+kbd>samp,
+kbd>kbd {
+    background-color: #5a5a5a;
+    border-radius: 3px;
+    color: #fff;
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.85em;
+    line-height: 1.4;
+    margin: 0 .1em;
+    padding: .1em .6em;
+}
